Add Azure Container Apps deployment setup
- Dockerfile: multi-stage Maven build -> temurin 21-jre, non-root, port 8080
- .dockerignore
- .github/workflows/deploy-backend.yml: build image, push to GHCR, roll out
  with `az containerapp update` on push to main
- DEPLOY.md: from-zero runbook (RG, MySQL Flexible, Container App, secrets, DNS)
- application-prod.properties: forward-headers strategy for the ACA ingress
  proxy, actuator health probes, open-in-view off, APP_SEED_DEMO_DATA passthrough
- DataSeeder (renamed from DevDataSeeder): now @Profile({"dev","prod"}). Dev
  still wipes + reseeds every boot; prod seeds ONLY when app.seed-demo-data=true
  and the DB is empty, and never deletes.
- Factories: add "prod" to @Profile so the prod seeder can use them
- SecurityConfig: CORS allowed origins from app.cors.allowed-origins env
  (APP_CORS_ALLOWED_ORIGINS), dropping the stale hard-coded AWS/CloudFront URLs

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>